<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_plus">+</string>
    <string name="btn_substract">-</string>
    <string name="btn_multiply">*</string>
    <string name="btn_divide">/</string>
    <string name="btn_dot">.</string>
    <string name="btn_equal">=</string>
    <string name="btn_clear">Сlear</string>
    <string name="btn_sin">Sin</string>
    <string name="btn_cos">Cos</string>
    <string name="btn_tan">Tan</string>
    <string name="btn_cot">Cot</string>
    <string name="btn_log">Log</string>
    <string name="btn_sqrt">Sqrt</string>
    <string name="btn_pow">^</string>
    <string name="btn_percent">%</string>
    <string name="btn_backspace">Delete</string>
</resources>
